2002-03-20  Alex Graveley  <alex@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Bump version to 0.7.1.

	* src/libsoup/soup-queue.c (start_request): Issue callback
	directly as we might not be in the request processing loop. Fixes
	bug #21931.
	(proxy_connect): Ditto.
	(soup_queue_connect_cb): Ditto.
	(request_in_progress): Impl. Check request is in queue.
	(soup_idle_handle_new_requests): Use request_in_progress before
	assigning connect_tag.

2002-03-19  Alex Graveley  <alex@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Bump version to 0.7.0.

2002-03-07  Alex Graveley  <alex@ximian.com>

	* configure.in: SOUP_AGE goes to 1, SOUP_CURRENT goes to 4.
	Update version to 0.6.99.

	* src/libsoup/soup-private.h (VERSION): Update win version to
	Win/0.6.99.

2002-03-07  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-context.c (soup_context_connect_cb): Remove
	debugging g_print.

2002-03-07  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-socket.h: Add soup_address_lookup_in_cache.

	* src/libsoup/soup-socket.c (soup_socket_connect): Handle host
	address already being resolved by checking in address cache.
	Allows us to return a non-null state pointer if soup_address_new
	calls its callback inline, but soup_socket_new does not.

	* src/libsoup/soup-socket-unix.c (lookup_in_cache_internal): Impl,
	checks the address cache for an existing resolved address or
	in progress lookup.
	(soup_address_lookup_in_cache): Impl, return existing resolved
	address if it exists.
	(soup_address_new): use lookup_in_cache_internal.

	* src/libsoup/soup-socket-win.c (soup_address_get_cached): Impl,
	return NULL as windows has no address hash.

2002-02-26  JP Rosevear  <jpr@ximian.com>

	* src/libsoup/soup-socket-unix.c (soup_address_new): inaddr is a
	different type for inet_addr, calculate sizeof directly

2002-02-25  JP Rosevear  <jpr@ximian.com>

	* src/libsoup/soup-socket-unix.c: apparently some platforms don't
	define INADDR_NONE either
